[package]
name = "systemd-socket-activation"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dlopen = ["libloading"]
dynlink = []

[dependencies]
libloading = { version = "0.7.0", optional = true }
